<project name="javaforce" default="jar" basedir=".">
  <description>JavaForce SDK</description>
  <!-- set global properties for this build -->
  <property name="app" value="javaforce"/>
  <property name="src" location="src"/>
  <property name="build" location="classes"/>
  <property name="home" value="."/>
  <property name="version" value="20.1.0"/>
  <property name="noelf" value="true"/>

  <property name="debian.depends" value="default-jre-headless, libjsch-java, libjzlib-java, libjcifs-java, libv4l-0, desktop-file-utils"/>
  <property name="fedora.depends" value="java-1.8.0-openjdk, jsch, jzlib, jcifs, libv4l, desktop-file-utils"/>
  <property name="arch.depends" value="jre8-openjdk, java-jsch, v4l-utils, desktop-file-utils"/>  <!-- missing jzlib jcifs -->

  <property environment="env"/>

  <import file="base.xml"/>

  <available property="have_glfw" file="native/glfw/src/window.c"/>
  <target name="glfw" unless="have_glfw" description="download glfw">
    <exec command="git clone https://github.com/glfw/glfw.git native/glfw"/>
  </target>

  <target name="ffmpeg-win64" description="download ffmpeg for Win64">
    <echo message="Downloading: jfcodecs-win64.zip"/>
    <get src="http://javaforce.sourceforge.net/jfcodecs-win64.zip" dest="jfcodecs-win64.zip"/>
    <mkdir dir="ffmpeg"/>
    <unzip src="jfcodecs-win64.zip" dest="ffmpeg"/>
  </target>

  <target name="ffmpeg-mac64" description="download ffmpeg for mac64">
    <echo message="Downloading: jfcodecs-mac64.zip"/>
    <get src="http://javaforce.sourceforge.net/jfcodecs-mac64.zip" dest="jfcodecs-mac64.zip"/>
    <mkdir dir="ffmpeg"/>
    <unzip src="jfcodecs-mac64.zip" dest="ffmpeg"/>
  </target>

  <target name="depjars" depends="depnatives,glfw">
  </target>

  <target name="compile" depends="depjars" description="compile the source">
    <!-- Compile the java code from ${src} into ${build} -->
    <mkdir dir="${build}"/>
    <mkdir dir="jars"/>
    <javac srcdir="${src}" destdir="${build}" target="1.8" source="1.8" debug="true" includeantruntime="false" nativeheaderdir="native/headers">
      <compilerarg value="-Xlint:unchecked"/>
      <classpath>
        <fileset dir="jars" includes="*.jar"/>
      </classpath>
    </javac>
  </target>

  <target name="jar" depends="depjars,compile" description="build jar file">
    <!-- Build jar file from class files -->
    <jar destfile="jars/javaforce.jar" includes="**/*.class" basedir="${build}">
      <fileset dir="${src}">
        <include name="**/*.png"/>
        <include name="**/*.html"/>
        <include name="**/*.js"/>
        <include name="**/*.css"/>
      </fileset>
    </jar>
    <copy file="jars/javaforce.jar" todir="."/>
  </target>

  <target name="javadoc" description="generate java documentation">
    <javadoc sourcepath="src" destdir="javadoc">
      <classpath>
        <fileset dir="jars" includes="*.jar"/>
      </classpath>
    </javadoc>
  </target>

  <!-- sudo ant install -->
  <target name="install" description="install files">
    <copy file="jars/javaforce.jar" todir="/usr/share/java"/>
    <copy file="jars/bouncycastle.jar" todir="/usr/share/java"/>
    <copy file="jars/filters.jar" todir="/usr/share/java"/>

    <copy file="native/jfnative${bits}.so" todir="/usr/lib"/>

    <copy file="lnxbin/jbus-call" todir="/usr/bin"/>
    <chmod file="/usr/bin/jbus-call" perm="+x"/>
    <copy file="lnxbin/jbus-client" todir="/usr/bin"/>
    <chmod file="/usr/bin/jbus-client" perm="+x"/>

    <elf appx="jfsudo" cfgdir="cfg/"/>
    <elf appx="jfsudo-ask" cfgdir="cfg/"/>
    <elf appx="jfopen" cfgdir="cfg/"/>
    <elf appx="jfs" cfgdir="cfg/"/>
    <elf appx="jfimageconvert" cfgdir="cfg/"/>
    <elf appx="jfr" cfgdir="cfg/"/>
    <elf appx="pngalpha" cfgdir="cfg/"/>
    <elf appx="jf-update-desktop-database" cfgdir="cfg/"/>
    <elf appx="jsmbget" cfgdir="cfg/"/>
    <elf appx="jservice" cfgdir="cfg/"/>
    <elf appx="jf-monitor-dir" cfgdir="cfg/"/>
    <elf appx="jfshare" cfgdir="cfg/"/>
    <elf appx="jcp" cfgdir="cfg/"/>
    <elf appx="jmv" cfgdir="cfg/"/>
    <elf appx="jrm" cfgdir="cfg/"/>
    <elf appx="jfver" cfgdir="cfg/"/>
    <elf appx="jfresmgr" cfgdir="cfg/"/>
  </target>

  <macrodef name="utilsmacro">
    <attribute name="app"/>
    <attribute name="bits"/>
    <sequential>
      <copy file="${home}/stubs/win@{bits}c.exe" tofile="@{app}.exe" overwrite="true"/>
      <java classpath="${home}/jars/javaforce.jar" classname="javaforce.utils.WinPE" fork="true">
        <arg value="@{app}.exe"/>
        <arg value="cfg/@{app}.cfg"/>
      </java>
    </sequential>
  </macrodef>

  <target name="utils" depends="jar" description="build exe for utils 64bit">
    <utilsmacro app="jfr" bits="64"/>
    <utilsmacro app="jfs" bits="64"/>
    <utilsmacro app="jfimageconvert" bits="64"/>
    <utilsmacro app="pngalpha" bits="64"/>
    <utilsmacro app="jfshare" bits="64"/>
    <utilsmacro app="WinPE" bits="64"/>
  </target>

  <target name="jre-base-desktop" description="build JRE for bundled JRE builds with desktop (swing) support">
    <exec command="jlink --module-path ${env.JAVA_HOME}/jmods --add-modules java.base,java.desktop,java.sql,jdk.crypto.ec,jdk.crypto.cryptoki --output jre_base_desktop"/>
    <delete>
      <fileset dir="jre_base_desktop/bin" includes="java**.exe"/>
    </delete>
    <delete dir="jre_base_desktop/include"/>
    <delete dir="jre_base_desktop/legal"/>
  </target>

  <target name="jre-base" description="build JRE for bundled JRE builds with only base">
    <exec command="jlink --module-path ${env.JAVA_HOME}/jmods --add-modules java.base,java.sql,jdk.crypto.ec,jdk.crypto.cryptoki --output jre_base"/>
    <delete>
      <fileset dir="jre_base/bin" includes="java**.exe"/>
    </delete>
    <delete dir="jre_base/include"/>
    <delete dir="jre_base/legal"/>
  </target>

  <target name="jre-base-javac" description="build JRE for bundled JRE builds with base and Java compiler">
    <exec command="jlink --module-path ${env.JAVA_HOME}/jmods --add-modules java.base,java.sql,jdk.compiler,jdk.jartool,jdk.zipfs,jdk.crypto.ec,jdk.crypto.cryptoki --output jre_base_javac"/>
    <delete>
      <fileset dir="jre_base_javac/bin" includes="java**.exe"/>
    </delete>
    <delete dir="jre_base_javac/include"/>
    <delete dir="jre_base_javac/legal"/>
  </target>

  <target name="clean" description="deletes compiled files">
    <delete>
      <fileset dir="classes" includes="**/*.class"/>
      <fileset dir="jars" includes="javaforce.jar"/>
    </delete>
  </target>
</project>
